[package]
name = "igg_downloader"
version = "0.1.0"
authors = ["schneki"]

[dependencies]
select = "0.4.2"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.3"
cookie = "0.10"
tokio-core = "0.1"
conrod = { version = "0.59.1", features=["winit","gfx_rs"] }
gfx_window_glutin = "0.22"
glutin = "0.14"
find_folder = "0.3.0"
image = "0.18"

winit = "0.12"
gfx = "0.17"
gfx_core = "0.8"
rand = "0.4"
rusttype = "0.5.2"
clipboard = "0.4.6"
